@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-09T08:14:53Z",
+  "timestamp" : "2023-10-10T00:48:51Z",
   "count_outdated" : 193,
   "uniques_outdated" : 166,
-  "count" : 204,
-  "uniques" : 176,
+  "count" : 206,
+  "uniques" : 177,
   "clones" : [
     {
       "timestamp": "2023-09-26T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2023-10-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
