@@ -1,6 +1,6 @@
 {
-  "count": 11,
-  "uniques": 3,
+  "count": 13,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-09-26T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2023-10-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
